<resources>
    <string name="app_name">让我来</string>
    <string name="base_url">http://test.rangwolai.com.cn</string>
    <string name="home">首页</string>
    <string name="main">主页面</string>
    <string name="shop_class">分类</string>
    <string name="main_shop_car">购物车</string>
    <string name="my_home">我的</string>
    <string name="updata">版本更新</string>
    <string name="downapk">软件下载</string>
    <string name="downingapk">正在下载更新</string>
    <string name="sure">确定</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="fastregister">快捷注册</string>
    <string name="register">完成注册</string>
    <string name="login">登录</string>
    <string name="loginsuccess">登录成功</string>
    <string name="loginfalse">登陆失败</string>
    <string name="telephone">电话</string>
    <string name="inputtelephone">请输入电话号码</string>
    <string name="notnulltelephone">手机号码不能为空</string>
    <string name="resetsupplytelephone">手机号码输入不正确，请重新输入</string>
    <string name="unusetelephone">手机号无效</string>
    <string name="supplytelephone">请补充完电话号码</string>
    <string name="notnullcode">验证码不能为空</string>
    <string name="getcode">获取验证码</string>
    <string name="code">短信验证码</string>
    <string name="getcodefalse">获取验证码失败</string>
    <string name="retrievecode">验证码错误，请重新输入</string>
    <string name="supplycode">请输入验证码</string>
    <string name="gaincode">获取验证码成功</string>
    <string name="resettest">重新验证</string>
    <string name="unusecode">输入的验证码无效，请重新输入</string>
    <string name="notnullnewpassword">新密码不能为空</string>
    <string name="notnullpassword">密码不能为空</string>
    <string name="resetsupplypassword">密码输入不正确，请重新输入</string>
    <string name="surenewpassword">请确认新密码</string>
    <string name="supplypassword">请输入密码</string>
    <string name="againsupplypassword">请再次输入密码</string>
    <string name="supplynewpassword">请填写新密码</string>
    <string name="resetpassword">重置密码</string>
    <string name="settingpassword">设置密码</string>
    <string name="resetpasswordfalse">重置密码失败</string>
    <string name="resetpasswordsuccess">重置密码成功</string>
    <string name="samepassword">两次密码输入不一致请重新输入</string>
    <string name="notnulluser">用户名不能为空</string>
    <string name="selectprovince">请选择省份</string>
    <string name="province">选择省份</string>
    <string name="selectcity">请选择城市</string>
    <string name="city">选择城市</string>
    <string name="selectdistrict">请选择地区</string>
    <string name="districtplese">选择地区</string>
    <string name="district">地区</string>
    <string name="supplyaddress">请把详细地址补充完整</string>
    <string name="address">地址</string>
    <string name="goodsaddress">收货地址</string>
    <string name="detailaddress">详细地址</string>
    <string name="inputdetailaddress">点击选择</string>
    <string name="sorryforaddress">抱歉，你还未添加任何收货地址</string>
    <string name="addaddress">添加地址</string>
    <string name="addnewaddress">新增收货地址</string>
    <string name="modifyaddress">修改地址</string>
    <string name="manageaddress">地址管理</string>
    <string name="deliverydistance">配送距离</string>
    <string name="deliveryamount">配送费</string>
    <string name="payamount">实付款</string>
    <string name="pay">付款</string>
    <string name="nowuse">立即使用</string>
    <string name="paynow">立即支付</string>
    <string name="surepay">确认支付</string>
    <string name="alipay">支付宝支付</string>
    <string name="wxpay">微信支付</string>
    <string name="balancepayment">余额支付</string>
    <string name="selectpayment">请选择支付方式</string>
    <string name="balance">结算</string>
    <string name="shop_direct">立即购买</string>
    <string name="tocarts">加入购物车</string>
    <string name="coupon">优惠券</string>
    <string name="mycoupon">我的优惠券</string>
    <string name="nocoupon">您还没有优惠券哦</string>
    <string name="coupon_newpersonal">新人专享优惠券</string>
    <string name="scene">全场通用</string>
    <string name="forgetpassword">忘记密码</string>
    <string name="setpassword">为了您的安全，请设置登录密码</string>
    <string name="modifypassword">修改登录密码</string>
    <string name="myorder">我的订单</string>
    <string name="prepay">待付款</string>
    <string name="pregetgoods">待收货</string>
    <string name="done">已完成</string>
    <string name="sale">售后服务</string>
    <string name="shoppickmyself">门店自提</string>
    <string name="alreadymaile">已包邮</string>
    <string name="balanceofaccount">账户余额</string>
    <string name="orderdetails">订单详情</string>
    <string name="deleteorder">删除订单</string>
    <string name="personal">个人中心</string>
    <string name="personalmsg">个人信息</string>
    <string name="accountsafe">账号安全</string>
    <string name="goodsdetail">商品详情</string>
    <string name="nomal">规格</string>
    <string name="level">产地</string>
    <string name="goodsamount">商品金额</string>
    <string name="addshopcarts">已加入购物车</string>
    <string name="shopcarts">购物车</string>
    <string name="edit">编辑</string>
    <string name="tittle">标题</string>
    <string name="pickmyself">自提</string>
    <string name="name">姓名</string>
    <string name="inputname">请输入姓名</string>
    <string name="changeheader">系统头像</string>
    <string name="nickname">昵称</string>
    <string name="octopus">章鱼</string>
    <string name="account">账号</string>
    <string name="sex">性别</string>
    <string name="set">设置</string>
    <string name="delete">删除</string>
    <string name="skip">跳过</string>
    <string name="share">分享</string>
    <string name="imgdes">图片描述</string>
    <string name="subjectimg">文件名称</string>
    <string name="name_my">陈先生</string>
    <string name="take_photo">拍照</string>
    <string name="pick_photo">从相册中选择</string>
    <string name="no_net">网络异常</string>

</resources>
