<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar" />

    <LinearLayout
        android:id="@+id/bitmap"
        android:layout_below="@+id/title_bar"
        android:layout_marginRight="@dimen/length_20"
        android:layout_marginLeft="@dimen/length_20"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="@dimen/length_50"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/phonenumber"
            android:background="@null"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/length_10"
            android:hint="@string/inputtelephone"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="@dimen/length_10"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/edit_cursor" />
        <com.jtsoft.letmedo.custom.LineEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/length_1"
            android:background="@color/gray"/>

        <Button
            android:id="@+id/get_code"
           android:layout_width="match_parent"
            android:layout_height="@dimen/length_35"
            android:paddingLeft="@dimen/length_15"
            android:paddingRight="@dimen/length_15"
            android:layout_marginTop="@dimen/length_20"
            android:textColor="@color/white"
            android:textSize="@dimen/size_18"
            android:background="@drawable/round_orange_solid_bg"
            android:text="@string/getcode" />

        <EditText
            android:id="@+id/code"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/length_20"
            android:hint="@string/supplycode"
            android:inputType="phone"
            android:maxLength="6"
            android:paddingLeft="@dimen/length_10"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/edit_cursor" />
        <com.jtsoft.letmedo.custom.LineEditText
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>

        <EditText
            android:id="@+id/password"
            android:background="@null"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/supplynewpassword"
            android:inputType="textPassword"
            android:maxLength="15"
            android:paddingLeft="@dimen/length_10"
            android:password="true"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/edit_cursor" />
        <com.jtsoft.letmedo.custom.LineEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/length_1"
            android:background="@color/gray"/>

        <EditText
            android:id="@+id/againpassword"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/length_20"
            android:hint="@string/surenewpassword"
            android:inputType="textPassword"
            android:maxLength="15"
            android:paddingLeft="@dimen/length_10"
            android:password="true"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/edit_cursor" />
        <com.jtsoft.letmedo.custom.LineEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/length_1"
            android:background="@color/gray"/>

        <Button
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/length_35"
            android:paddingLeft="@dimen/length_15"
            android:paddingRight="@dimen/length_15"
            android:layout_marginTop="@dimen/length_20"
            android:textColor="@color/white"
            android:textSize="@dimen/size_18"
            android:background="@drawable/round_orange_solid_bg"
            android:text="@string/sure" />
    </LinearLayout>

</RelativeLayout>