<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/length_10"
        android:layout_marginLeft="@dimen/length_10">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/size_18"
            android:padding="10dp"/>
        <EditText
            android:id="@+id/name"
            android:padding="@dimen/length_10"
            android:layout_marginLeft="@dimen/length_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/inputname"
            android:textColorHint="@color/black"
            android:textSize="@dimen/size_18"
            android:background="@null"/>
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_below="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/length_1"
        android:background="@color/gray"/>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_below="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/length_10"
        android:layout_marginLeft="@dimen/length_10">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telephone"
            android:textColor="@color/black"
            android:textSize="@dimen/size_18"
            android:padding="@dimen/length_10"/>
        <EditText
            android:id="@+id/phonenumber"
            android:padding="@dimen/length_10"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/inputtelephone"
            android:textColorHint="@color/black"
            android:textSize="@dimen/size_18"
            android:background="@null"/>
    </LinearLayout>
    <View
        android:id="@+id/view2"
        android:layout_below="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/length_1"
        android:background="@color/gray"/>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_below="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/length_10"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/length_10">
        <TextView
            android:padding="@dimen/length_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/district"
            android:textColor="@color/black"
            android:textSize="@dimen/size_18"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/length_10"
            android:layout_marginRight="@dimen/length_20"
            android:weightSum="3">
            <LinearLayout
                android:id="@+id/province"
                android:layout_weight="1"
                android:layout_width="@dimen/length_0"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvprovince"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/province"
                    android:textSize="@dimen/size_18"
                    android:textColor="@color/black"/>
                <ImageView
                    android:src="@drawable/backpress_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/city"
                android:layout_weight="1"
                android:layout_width="@dimen/length_0"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvcity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textSize="@dimen/size_18"
                    android:textColor="@color/black"/>
                <ImageView
                    android:src="@drawable/backpress_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/district"
                android:layout_weight="1"
                android:layout_width="@dimen/length_0"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvdistrict"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/districtplese"
                    android:textSize="@dimen/size_18"
                    android:textColor="@color/black"/>
                <ImageView
                    android:src="@drawable/backpress_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <View
        android:id="@+id/view3"
        android:layout_below="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/length_1"
        android:background="@color/gray"/>

    <LinearLayout
        android:id="@+id/layout4"
        android:layout_below="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/length_10"
        android:layout_marginTop="@dimen/length_10"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailaddress"
            android:textColor="@color/black"
            android:textSize="@dimen/size_18"
            android:padding="@dimen/length_10"/>
        <TextView
            android:id="@+id/address"
            android:padding="@dimen/length_10"
            android:layout_marginLeft="@dimen/length_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputdetailaddress"
            android:textColor="@color/black"
            android:textSize="@dimen/size_18"
            android:background="@null"/>
    </LinearLayout>
    <View
        android:id="@+id/view4"
        android:layout_below="@+id/layout4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/length_1"
        android:background="@color/gray"/>
    <LinearLayout
        android:id="@+id/layout5"
        android:layout_below="@id/view4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/length_10"
        android:layout_marginTop="@dimen/length_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="门牌号"
            android:textColor="@color/black"
            android:textSize="@dimen/size_18"
            android:padding="10dp"/>
        <EditText
            android:id="@+id/house_number"
            android:padding="@dimen/length_10"
            android:layout_marginLeft="@dimen/length_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="请输入门牌号"
            android:textColorHint="@color/black"
            android:textSize="@dimen/size_18"
            android:background="@null"/>

    </LinearLayout>
    <View
        android:id="@+id/view5"
        android:layout_below="@+id/layout5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/length_1"
        android:background="@color/gray"/>


    <Button
        android:id="@+id/saveAdress"
        android:layout_width="match_parent"
        android:layout_height="@dimen/length_50"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/save"
        android:textSize="@dimen/size_18"
        android:textColor="@color/white"
        android:background="@color/green"/>
</RelativeLayout>