<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar" />

<LinearLayout
    android:layout_marginLeft="@dimen/length_20"
    android:layout_marginRight="@dimen/length_20"
    android:layout_marginTop="@dimen/length_10"
    android:layout_below="@+id/title_bar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/length_400"
    android:orientation="vertical"
    android:background="@drawable/regist_background">
    <LinearLayout
        android:id="@+id/bitmap"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <EditText
            android:background="@null"
            android:id="@+id/phonenumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/length_10"
            android:hint="@string/inputtelephone"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="@dimen/length_10"
            android:paddingRight="@dimen/length_10"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/edit_cursor" />
        <com.jtsoft.letmedo.custom.LineEditText
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="@dimen/length_1"
            android:background="@color/gray"/>

        <EditText
            android:background="@null"
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/length_30"
            android:hint="@string/supplypassword"
            android:paddingLeft="@dimen/length_10"
            android:paddingRight="@dimen/length_10"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/edit_cursor" />
        <com.jtsoft.letmedo.custom.LineEditText
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="@dimen/length_1"
            android:background="@color/gray"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/length_35"
            android:paddingLeft="@dimen/length_15"
            android:paddingRight="@dimen/length_15"
            android:layout_marginTop="@dimen/length_70"
            android:textColor="@color/white"
            android:textSize="@dimen/size_18"
            android:background="@drawable/shape_denglu"
            android:text="@string/login" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/length_20"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/jumpToRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/fastregister"
                android:textColor="@color/text_default_style" />

            <TextView
                android:id="@+id/jumpToForgetPasswd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgetpassword"
                android:layout_alignParentLeft="true"
                android:textColor="@color/text_default_style" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>

</RelativeLayout>