<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/title_bar"/>
    <TextView
        android:id="@+id/inputpassword"
        android:layout_marginLeft="@dimen/length_10"
        android:layout_marginTop="@dimen/length_50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/supplypassword"
        android:textSize="@dimen/size_18"/>
    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/length_5"
        android:hint="@string/supplypassword"
        android:layout_marginLeft="@dimen/length_50"
        android:layout_marginTop="@dimen/length_10"
        android:textSize="@dimen/size_16"/>

    <TextView
        android:id="@+id/againinputpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/againsupplypassword"
        android:textSize="@dimen/size_18"
        android:layout_marginLeft="@dimen/length_10"/>

    <EditText
        android:id="@+id/et2password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/length_5"
        android:layout_marginLeft="@dimen/length_50"
        android:layout_marginTop="@dimen/length_10"
        android:hint="@string/againsupplypassword"
        android:textSize="@dimen/size_16"/>

    <Button
        android:id="@+id/set"
        android:layout_marginLeft="@dimen/length_10"
        android:layout_marginRight="@dimen/length_10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/length_35"
        android:paddingLeft="@dimen/length_15"
        android:paddingRight="@dimen/length_15"
        android:layout_marginTop="@dimen/length_70"
        android:textColor="@color/white"
        android:textSize="@dimen/size_18"
        android:gravity="center"
        android:background="@drawable/round_orange_solid_bg"
        android:text="@string/set" />

</LinearLayout>